--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    max-height: 120vh !important;
+    min-height: 120vh !important;
     
 }
 }
