--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+/* *{
+    padding: 0px !important;
+    margin: 0px !important;
+    box-sizing: border-box !important;
+} */
 @media screen and (max-width: 990px) {
     .medium-screen {
         background-image: linear-gradient(rgba(0, 0, 0, 0.680), rgba(0, 0, 0, 0.680)), url(./assets/Img/WhatsApp_Image_2023-09-12_at_4.33.09_PM-removebg-preview.png);
