--- a/main.css
+++ b/main.css
@@ -3,6 +3,9 @@
     margin: 0px !important;
     box-sizing: border-box !important;
 } */
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: 'Rubik Iso', cursive;
 }
@@ -17,7 +20,17 @@ h1, h2, h3, h4, h5, h6 {
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
-        min-height: 80vh !important;
+        height: auto !important;
+
+    }
+}
+@media screen and (max-width: 430px) {
+    .medium-screen {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.680), rgba(0, 0, 0, 0.680)), url(./assets/Img/Hero-bg.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 100% 100%;
+        height: auto !important;
 
     }
 }
